--- a/AkkaMjrOne.Step1.csproj
+++ b/AkkaMjrOne.Step1.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Akka" Version="1.3.9" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Completed\" />
+    <Compile Remove="Completed\ConsoleReaderActor.cs" />
+    <Compile Remove="ConsoleReaderActor.cs" />
+    <Compile Remove="ConsoleWriterActor.cs" />
   </ItemGroup>
 </Project>
