--- a/AkkaMjrOne.Step1/AkkaMjrOne.Step1.csproj
+++ b/AkkaMjrOne.Step1/AkkaMjrOne.Step1.csproj
@@ -8,4 +8,8 @@
   <ItemGroup>
     <Folder Include="Completed\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Akka" Version="1.3.10" />
+  </ItemGroup>
 </Project>
